refat: kubernets deploys `TODO: ajustar amazenamento para ficar dinamico com longhorn`

--- a/kubernetes/deploys/kuma/deployment.yaml
+++ b/kubernetes/deploys/kuma/deployment.yaml
@@ -1,7 +1,7 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  namespace: internal-tools
+  namespace: tools
   name: kuma-dpl
 spec:
   replicas: 1
