--- a/kubernetes/deploys/kuma/namespace.yaml
+++ b/kubernetes/deploys/kuma/namespace.yaml
@@ -1,6 +1,6 @@
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: internal-tools
+  name: tools
   labels:
-    name: internal-tools
+    name: tools
