--- a/kubernetes/deploys/kuma/service.yaml
+++ b/kubernetes/deploys/kuma/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: internal-tools
+  namespace: tools
   name: kuma-svc
   annotations:
     metallb.universe.tf/loadBalancerIPs: 192.168.3.215
