--- a/kubernetes/deploys/minecraft/deployment.yaml
+++ b/kubernetes/deploys/minecraft/deployment.yaml
@@ -20,10 +20,10 @@ spec:
           resources:
             requests:
               memory: "1Gi"
-              cpu: "2"
+              cpu: 500m
             limits:
               memory: "2Gi"
-              cpu: "4"
+              cpu: "1"
           volumeMounts:
             - name: minecraft-pv-claim
               mountPath: /data
