--- a/scripts/K3S/Longhorn/service.yaml
+++ b/scripts/K3S/Longhorn/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: longhorn-ingress-lb
+  name: longhorn-svc
   namespace: longhorn-system
 spec:
   selector:
