--- a/scripts/K3S/Longhorn/storage.class.yaml
+++ b/scripts/K3S/Longhorn/storage.class.yaml
@@ -1,14 +1,16 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: longhorn-fast
+  name: longhorn-storage
+  namespace: longhorn-system
+
 provisioner: driver.longhorn.io
 allowVolumeExpansion: true
-reclaimPolicy: "Delete"
+reclaimPolicy: Retain
 volumeBindingMode: Immediate
 parameters:
-  numberOfReplicas: "3"
-  staleReplicaTimeout: "30"
+  numberOfReplicas: "2"
+  staleReplicaTimeout: "90"
   fsType: "ext4"
-  diskSelector: "ssd"
-  nodeSelector: "ssd"
+  # diskSelector: "ssd"
+  # nodeSelector: "ssd"
