--- a/kubernetes/deploys/minecraft/volume.yaml
+++ b/kubernetes/deploys/minecraft/volume.yaml
@@ -1,29 +1,12 @@
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  namespace: games
-  name: minecraft-pv
-spec:
-  capacity:
-    storage: 4Gi
-  accessModes:
-    - ReadWriteMany
-  volumeMode: Filesystem
-  storageClassName: manual
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: "/srv/dev-disk-by-uuid-eeabf72e-2e04-4c04-ac7d-26e8b134abdf/KUBERNETES/games-server-minecraft"
-
----
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   namespace: games
-  name: minecraft-pv-claim
+  name: minecraft-pvc
 spec:
-  storageClassName: manual
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
+  storageClassName: longhorn-storage
   resources:
     requests:
-      storage: 4Gi
+      storage: 2Gi
